# code-compiler

./: .gitignore  Dockerfile-lexer  Dockerfile-parser  Makefile  README.md  docker-compose-lexer.yml  docker-compose-lexical.yml  docker-compose-parser.yml  docker-compose-syntax.yml  project.toml  pyproject.toml  setup.cfg  tox.ini
requirements/: requirements.in  requirements.txt
src/code_compiler/: lexer.py  lexical.py  parser.py  syntax.py  utils.py
src/code_compiler/data/: example_3.lcc
