[metadata]
name = code_compiler
version = attr: code_compiler.VERSION
author = Miguel Grieder, Matheus Bernardi, Vinicius Antunes, Jhonata Rosa
description = Lexic and Parser compiler using Python PLY.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
